bug fixed: overflow

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
 
 @layer components {
   .wrap {
-    @apply w-full mx-auto tablet:w-[90%] desktop:w-[80%] px-7;
+    @apply w-full mx-auto tablet:w-[90%] desktop:w-[80%] px-7 overflow-x-hidden;
   }
   .spacing-top {
     @apply pt-30 mobile:pt-32 tablet:pt-36 desktop:pt-40;
